# fast_convolution

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
example/: CMakeLists.txt  conv_test.cpp  realtime_conv.cpp
include/: fft.h  fft_convolution.h  native_convolution.h  overlap_add_convolution.h  utilities.h
include/fast_convolution/: fft.h  fft_convolution.h  frequency_domain_delay_line.h  overlap_save_convoluton.h  realtime_uniformly_partitioned_conv.h  realtime_uniformly_partitioned_conv_utilities.h  utilities.h
python/: FastConvolution.ipynb  UniformlyPartitionedConvolutionExample.ipynb
src/: native_convolution.cpp
tests/: CMakeLists.txt  test_frequency_domain_delay_line.cpp  test_realtime_uniformly_partitioned_conv.cpp  test_realtime_uniformly_partitioned_conv_utilities.cpp  test_realtime_uniformly_partitioned_convolution.cpp  test_utilities.cpp
